fixed the social media icons being off-centre on mobile view

--- a/src/components/footer/Footer.module.scss
+++ b/src/components/footer/Footer.module.scss
@@ -58,8 +58,8 @@
     margin: 0 0 2rem 0;
   }
 
-  .icon {
-    margin-right: 0;
+  .socials-wrapper {
+    padding-left: 2rem;
   }
 }
 
